[gd_scene load_steps=22 format=2]

[ext_resource path="res://Escenas/Enemigos/Esqueleto.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Esqueleto/Slash_1/Slash1_4.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Esqueleto/Slash_1/Slash1_5.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_0.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_1.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_2.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_3.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_4.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_5.png" type="Texture" id=9]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_6.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Esqueleto/Walk_1/Walk1_7.png" type="Texture" id=11]
[ext_resource path="res://Recursos/Esqueleto/Slash_1/Slash1_1.png" type="Texture" id=12]
[ext_resource path="res://Recursos/Esqueleto/Slash_1/Slash1_0.png" type="Texture" id=13]
[ext_resource path="res://Recursos/Esqueleto/Slash_1/Slash1_2.png" type="Texture" id=14]
[ext_resource path="res://Recursos/Esqueleto/Slash_1/Slash1_3.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Slash",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 50.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 50.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.313726, 0.784314, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21, 45 )

[node name="Esqueleto" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedEsqueleto" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Slash"
playing = true

[node name="RayCastPared" type="RayCast2D" parent="AnimatedEsqueleto"]
position = Vector2( 0, 40 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="RayCastSuelo" type="RayCast2D" parent="AnimatedEsqueleto"]
position = Vector2( 25, 0 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="RayCastPlayer" type="RayCast2D" parent="AnimatedEsqueleto"]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 4

[node name="RayCastLejano" type="RayCast2D" parent="AnimatedEsqueleto"]
position = Vector2( 130, 20 )
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 4

[node name="RayCastPlayerFlip" type="RayCast2D" parent="AnimatedEsqueleto"]
position = Vector2( -25, 20 )
enabled = true
cast_to = Vector2( -35, 0 )
collision_mask = 4

[node name="Slash" type="Area2D" parent="AnimatedEsqueleto" groups=["Slash"]]
collision_layer = 16
collision_mask = 0

[node name="HitboxSlash" type="CollisionShape2D" parent="AnimatedEsqueleto/Slash"]
position = Vector2( 54, 12 )
scale = Vector2( 1, 0.75 )
shape = SubResource( 6 )
disabled = true

[node name="HitboxEsqueleto" type="CollisionShape2D" parent="."]
position = Vector2( -1, 11 )
shape = SubResource( 2 )

[node name="TimerSpit" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BarraVida" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -48.0
margin_right = 16.0
margin_bottom = -34.0
rect_scale = Vector2( 1, 0.5 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetectorColisiones" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="HitboxDetector" type="CollisionShape2D" parent="DetectorColisiones"]
visible = false
position = Vector2( -1, 11 )
shape = SubResource( 5 )

[node name="TimerTocado" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="TimerSpit" to="." method="_on_TimerSpit_timeout"]
[connection signal="area_entered" from="DetectorColisiones" to="." method="_on_DetectorColisiones_area_entered"]
[connection signal="body_entered" from="DetectorColisiones" to="." method="_on_DetectorColisiones_body_entered"]
[connection signal="timeout" from="TimerTocado" to="." method="_on_TimerTocado_timeout"]
